add --enable-preview option